# cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  build.py  conanfile.txt
app/: CMakeLists.txt  main.cpp
app/Utils/: args.cpp  args.hpp  base.hpp
